syntax = "proto3";

package iec104;

import "google/protobuf/timestamp.proto";

// 消息体结构
message MsgBody {
  string host = 1;              // 主机地址
  int32 port = 2;               // 端口号
  string asdu = 3;              // ASDU数据
  TypeId type_id = 4;           // 类型标识
  uint32 coa = 5;               // 公共地址(Common Address)
  IoaBody body = 6;             // 信息对象体
  google.protobuf.Timestamp time = 7;  // 时间戳
  map<string, bytes> meta_data = 8;  // 元数据，值类型为bytes以支持任意数据
}

// 类型标识枚举
enum TypeId {
  UNKNOWN = 0;

  // 遥信信息
  M_SP_NA_1 = 1;    // 单点信息
  M_DP_NA_1 = 3;    // 双点信息
  M_ST_NA_1 = 5;    // 步位置信息
  M_BO_NA_1 = 7;    // 比特串信息

  // 遥测信息
  M_ME_NA_1 = 9;    // 规一化值
  M_ME_NB_1 = 11;   // 标度化值
  M_ME_NC_1 = 13;   // 短浮点数
  M_IT_NA_1 = 21;   // 累计量

  // 遥控信息
  C_SC_NA_1 = 45;   // 单点遥控
  C_DC_NA_1 = 46;   // 双点遥控
  C_RC_NA_1 = 47;   // 调节步长
  C_SE_NA_1 = 48;   // 设置值(规一化值)
  C_SE_NB_1 = 49;   // 设置值(标度化值)
  C_SE_NC_1 = 50;   // 设置值(短浮点数)

  // 遥调信息
  C_CS_NA_1 = 58;   // 命令撤销

  // 总召唤
  C_IC_NA_1 = 100;  // 总召唤命令
  C_CI_NA_1 = 101;  // 时钟同步命令
  C_RD_NA_1 = 102;  // 读命令
  C_CS_NA_1 = 103;  // 时钟同步命令(带时标)
  C_TS_NA_1 = 104;  // 测试命令
}

// 信息对象体
message IoaBody {
  oneof body_type {
    // 遥信信息
    SinglePointInfo single_point = 1;       // 单点信息(M_SP_NA_1)
    DoublePointInfo double_point = 2;       // 双点信息(M_DP_NA_1)
    StepPositionInfo step_position = 3;     // 步位置信息(M_ST_NA_1)
    BitString32Info bit_string = 4;         // 比特位串信息(M_BO_NA_1)

    // 遥测信息
    MeasuredValueNormalInfo normalized = 5; // 规一化遥测值(M_ME_NA_1)
    MeasuredValueScaledInfo scaled = 6;     // 标度化遥测值(M_ME_NB_1)
    MeasuredValueFloatInfo float_value = 7; // 浮点遥测值(M_ME_NC_1)
    IntegratedTotalInfo integrated_total = 8; // 累计量(M_IT_NA_1)

    // 遥控信息
    SingleCommand single_command = 9;       // 单点遥控(C_SC_NA_1)
    DoubleCommand double_command = 10;      // 双点遥控(C_DC_NA_1)
    RegulatingStepCommand regulating_step = 11; // 调节步长(C_RC_NA_1)
    SetpointCommandNormalized setpoint_normalized = 12; // 设置值(规一化值)(C_SE_NA_1)
    SetpointCommandScaled setpoint_scaled = 13; // 设置值(标度化值)(C_SE_NB_1)
    SetpointCommandFloat setpoint_float = 14; // 设置值(短浮点数)(C_SE_NC_1)

    // 遥调信息
    CommandCancel command_cancel = 15;      // 命令撤销(C_CS_NA_1)

    // 总召唤
    GeneralInterrogation general_interrogation = 16; // 总召唤命令(C_IC_NA_1)
    ClockSynchronization clock_synchronization = 17; // 时钟同步命令(C_CI_NA_1)
    ReadCommand read_command = 18;          // 读命令(C_RD_NA_1)
    TestCommand test_command = 19;          // 测试命令(C_TS_NA_1)
  }
}

// 单点信息
message SinglePointInfo {
  uint32 ioa = 1;               // 信息对象地址
  bool value = 2;               // 状态值
  uint32 qds = 3;               // 品质描述词
  string qds_desc = 4;          // 品质描述词说明
  bool ov = 5;                  // 溢出标志
  bool bl = 6;                  // 封锁标志
  bool sb = 7;                  // 替换标志
  bool nt = 8;                  // 新旧标志
  bool iv = 9;                  // 无效标志
  google.protobuf.Timestamp time = 10;  // 时标
}

// 双点信息
message DoublePointInfo {
  uint32 ioa = 1;               // 信息对象地址
  uint32 value = 2;             // 状态值(0-3)
  uint32 qds = 3;               // 品质描述词
  string qds_desc = 4;          // 品质描述词说明
  bool ov = 5;                  // 溢出标志
  bool bl = 6;                  // 封锁标志
  bool sb = 7;                  // 替换标志
  bool nt = 8;                  // 新旧标志
  bool iv = 9;                  // 无效标志
  google.protobuf.Timestamp time = 10;  // 时标
}

// 步位置信息
message StepPositionInfo {
  uint32 ioa = 1;               // 信息对象地址

  message StepValue {
    int32 val = 1;              // 步位置值
    bool has_transient = 2;     // 是否有暂态过程
  }
  StepValue value = 2;          // 步位置值

  uint32 qds = 3;               // 品质描述词
  string qds_desc = 4;          // 品质描述词说明
  bool ov = 5;                  // 溢出标志
  bool bl = 6;                  // 封锁标志
  bool sb = 7;                  // 替换标志
  bool nt = 8;                  // 新旧标志
  bool iv = 9;                  // 无效标志
  google.protobuf.Timestamp time = 10;  // 时标
}

// 比特位串信息
message BitString32Info {
  uint32 ioa = 1;               // 信息对象地址
  uint32 value = 2;             // 32位比特串值
  uint32 qds = 3;               // 品质描述词
  string qds_desc = 4;          // 品质描述词说明
  bool ov = 5;                  // 溢出标志
  bool bl = 6;                  // 封锁标志
  bool sb = 7;                  // 替换标志
  bool nt = 8;                  // 新旧标志
  bool iv = 9;                  // 无效标志
  google.protobuf.Timestamp time = 10;  // 时标
}

// 规一化遥测值
message MeasuredValueNormalInfo {
  uint32 ioa = 1;               // 信息对象地址
  float value = 2;              // 规一化值(-1.0~1.0)
  uint32 qds = 3;               // 品质描述词
  string qds_desc = 4;          // 品质描述词说明
  bool ov = 5;                  // 溢出标志
  bool bl = 6;                  // 封锁标志
  bool sb = 7;                  // 替换标志
  bool nt = 8;                  // 新旧标志
  bool iv = 9;                  // 无效标志
  google.protobuf.Timestamp time = 10;  // 时标
}

// 标度化遥测值
message MeasuredValueScaledInfo {
  uint32 ioa = 1;               // 信息对象地址
  int32 value = 2;              // 标度化值
  uint32 qds = 3;               // 品质描述词
  string qds_desc = 4;          // 品质描述词说明
  bool ov = 5;                  // 溢出标志
  bool bl = 6;                  // 封锁标志
  bool sb = 7;                  // 替换标志
  bool nt = 8;                  // 新旧标志
  bool iv = 9;                  // 无效标志
  google.protobuf.Timestamp time = 10;  // 时标
}

// 浮点遥测值
message MeasuredValueFloatInfo {
  uint32 ioa = 1;               // 信息对象地址
  double value = 2;             // 浮点值
  uint32 qds = 3;               // 品质描述词
  string qds_desc = 4;          // 品质描述词说明
  bool ov = 5;                  // 溢出标志
  bool bl = 6;                  // 封锁标志
  bool sb = 7;                  // 替换标志
  bool nt = 8;                  // 新旧标志
  bool iv = 9;                  // 无效标志
  google.protobuf.Timestamp time = 10;  // 时标
}

// 累计量
message IntegratedTotalInfo {
  uint32 ioa = 1;               // 信息对象地址
  uint64 value = 2;             // 累计值
  uint32 qds = 3;               // 品质描述词
  string qds_desc = 4;          // 品质描述词说明
  bool ov = 5;                  // 溢出标志
  bool bl = 6;                  // 封锁标志
  bool sb = 7;                  // 替换标志
  bool nt = 8;                  // 新旧标志
  bool iv = 9;                  // 无效标志
  google.protobuf.Timestamp time = 10;  // 时标
}

// 单点遥控
message SingleCommand {
  uint32 ioa = 1;               // 信息对象地址
  bool value = 2;               // 控制值
  uint32 qcc = 3;               // 命令品质描述词
  string qcc_desc = 4;          // 命令品质描述词说明
  uint32 select_execute = 5;    // 选择/执行标志
  uint32 time = 6;              // 命令有效期
}

// 双点遥控
message DoubleCommand {
  uint32 ioa = 1;               // 信息对象地址
  uint32 value = 2;             // 控制值(0-3)
  uint32 qcc = 3;               // 命令品质描述词
  string qcc_desc = 4;          // 命令品质描述词说明
  uint32 select_execute = 5;    // 选择/执行标志
  uint32 time = 6;              // 命令有效期
}

// 调节步长
message RegulatingStepCommand {
  uint32 ioa = 1;               // 信息对象地址

  message StepValue {
    int32 val = 1;              // 步长值
    bool is_scaled = 2;         // 是否为标度值
  }
  StepValue value = 2;          // 步长值

  uint32 qcc = 3;               // 命令品质描述词
  string qcc_desc = 4;          // 命令品质描述词说明
  uint32 select_execute = 5;    // 选择/执行标志
  uint32 time = 6;              // 命令有效期
}

// 设置值(规一化值)
message SetpointCommandNormalized {
  uint32 ioa = 1;               // 信息对象地址
  float value = 2;              // 规一化值
  uint32 qos = 3;               // 设置值品质描述词
  string qos_desc = 4;          // 设置值品质描述词说明
  uint32 select_execute = 5;    // 选择/执行标志
}

// 设置值(标度化值)
message SetpointCommandScaled {
  uint32 ioa = 1;               // 信息对象地址
  int32 value = 2;              // 标度化值
  uint32 qos = 3;               // 设置值品质描述词
  string qos_desc = 4;          // 设置值品质描述词说明
  uint32 select_execute = 5;    // 选择/执行标志
}

// 设置值(短浮点数)
message SetpointCommandFloat {
  uint32 ioa = 1;               // 信息对象地址
  double value = 2;             // 浮点值
  uint32 qos = 3;               // 设置值品质描述词
  string qos_desc = 4;          // 设置值品质描述词说明
  uint32 select_execute = 5;    // 选择/执行标志
}

// 命令撤销
message CommandCancel {
  uint32 ioa = 1;               // 信息对象地址
  uint32 command_type = 2;      // 被撤销的命令类型
  uint32 reason = 3;            // 撤销原因
  string reason_desc = 4;       // 撤销原因说明
}

// 总召唤命令
message GeneralInterrogation {
  uint32 ca = 1;                // 召唤地址
  uint32 qoi = 2;               // 召唤限定词
  string qoi_desc = 3;          // 召唤限定词说明
}

// 时钟同步命令
message ClockSynchronization {
  uint32 ca = 1;                // 召唤地址
  google.protobuf.Timestamp time = 2;  // 同步时间
}

// 读命令
message ReadCommand {
  uint32 ca = 1;                // 召唤地址
  uint32 ioa = 2;               // 信息对象地址
  uint32 qoi = 3;               // 召唤限定词
  string qoi_desc = 4;          // 召唤限定词说明
}

// 测试命令
message TestCommand {
  uint32 ca = 1;                // 召唤地址
  uint32 test_id = 2;           // 测试标识
  string test_data = 3;         // 测试数据
}